// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input field updates on email input 1`] = `
<div
  className="contact"
  id="contact"
>
  <div
    className="filter"
  >
    <form
      className="form"
      id="formContact"
      onSubmit={[Function]}
    >
      <input
        id="formEmail"
        name="formEmail"
        onChange={[Function]}
        placeholder="email"
        required={true}
        type="email"
        value="New email"
      />
      <textarea
        cols="40"
        id="formMsg"
        name="formMsg"
        onChange={[Function]}
        placeholder="meddelande"
        required={true}
        rows="8"
        value=""
      />
      <input
        className="btn--cta"
        id="btn-submit"
        type="submit"
        value="Skicka"
      />
    </form>
  </div>
</div>
`;

exports[`Input field updates on msg input 1`] = `
<div
  className="contact"
  id="contact"
>
  <div
    className="filter"
  >
    <form
      className="form"
      id="formContact"
      onSubmit={[Function]}
    >
      <input
        id="formEmail"
        name="formEmail"
        onChange={[Function]}
        placeholder="email"
        required={true}
        type="email"
        value=""
      />
      <textarea
        cols="40"
        id="formMsg"
        name="formMsg"
        onChange={[Function]}
        placeholder="meddelande"
        required={true}
        rows="8"
        value="New msg"
      />
      <input
        className="btn--cta"
        id="btn-submit"
        type="submit"
        value="Skicka"
      />
    </form>
  </div>
</div>
`;

exports[`components <Contact/> renders correctly 1`] = `
<div
  className="contact"
  id="contact"
>
  <div
    className="filter"
  >
    <form
      className="form"
      id="formContact"
      onSubmit={[Function]}
    >
      <input
        id="formEmail"
        name="formEmail"
        onChange={[Function]}
        placeholder="email"
        required={true}
        type="email"
        value=""
      />
      <textarea
        cols="40"
        id="formMsg"
        name="formMsg"
        onChange={[Function]}
        placeholder="meddelande"
        required={true}
        rows="8"
        value=""
      />
      <input
        className="btn--cta"
        id="btn-submit"
        type="submit"
        value="Skicka"
      />
    </form>
  </div>
</div>
`;
